# CityModelling

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  README_PIPELINE.md  cli.py  generate_2020_comparison.py  generate_individual_comparisons.py  pyproject.toml  test_lbp_querétaro.py  test_querétaro_loading.py
.copilot/: INSTRUCTIONS.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
configs/: default.yaml
docs/: class_diagram.puml  sequence_diagram.puml
examples/: satellite_classification_example.py
notebooks/: 02_visualization.ipynb  03_batch_processing.ipynb
src/tesis_ac/: __init__.py  config.py  run_classify_and_grid.py  run_optimize.py
src/tesis_ac/ca/: __init__.py
src/tesis_ac/clustering/: __init__.py  cluster.py
src/tesis_ac/eval/: __init__.py
src/tesis_ac/features/: edges.py  lbp.py  stack.py
src/tesis_ac/ga/: __init__.py
src/tesis_ac/grid/: __init__.py
src/tesis_ac/pipeline/: __init__.py  cli.py  clustering.py  feature_extraction.py  main_pipeline.py  visualization.py
src/tesis_ac/utils/: io.py
src/tesis_ac/woe/: __init__.py
tests/: conftest.py  test_config.py  test_io.py
